Proyecto Integrador trabajado, se agregan estilos adicionales en la sección de mis actividades.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                         <div class="márgenesmistecfa">
 
-                            <img id="HTML" src="assets/html-5.png" alt="Icono_HTML">
+                            <img id="HTML" src="assets/html-5.png" alt="Icono_HTML" class="efectomistecfa">
 
                         </div>
 
@@ -81,7 +81,7 @@
 
                         <div class="márgenesmistecfa">
 
-                            <img id="CSS" src="assets/css-3.png" alt="Icono_CSS">
+                            <img id="CSS" src="assets/css-3.png" alt="Icono_CSS" class="efectomistecfa">
 
                         </div>
 
@@ -97,7 +97,7 @@
 
                         <div class="márgenesmistecfa">
 
-                            <img id="JavaScript" src="assets/JavaScript.png" alt="Icono_JavaScript">
+                            <img id="JavaScript" src="assets/JavaScript.png" alt="Icono_JavaScript" class="efectomistecfa">
 
                         </div>
 
