Se modifica y/u optimiza el código: Ajustes en los colores de la interfaz para mantener la coherencia con la estética de PowerShell, incluyendo el botón 'AGREGAR ACTIVIDAD' y el label 'Nombre de la actividad'.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <h1 id = "nombre"> ÓSCAR PADILLA</h1> 
                 <h2 id = "titulo"> Full Stack Developer</h2>
-                <h3 id = "bienvenida" class = "cursor"></h3>
+                <h3 id = "bienvenida" ></h3>
                 
             </div>
 
@@ -162,7 +162,7 @@
 
             <div class="centrarh2misactfa">
 
-                <h2 id="tipodeletrahs">Mis Actividades Favoritas</h2>
+                <h2 id="tipodeletrahs"> Mis Actividades Favoritas</h2>
 
             </div>
 
