Se modifica y/u optimiza el código: mejoras en el diseño responsive para pantallas pequeñas, ajustes en estilos de inputs, tarjetas e íconos, y validación visual de formulario de actividades.

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 
                     <div class="flex-item-forybut1">
 
-                        <textarea id="descripción_de_la_actividad" class="inputanchoforybut"></textarea>
-                        <label for="descripción_de_la_actividad">Describir la actividad</label>
+                        <textarea id="descripcion_de_la_actividad" class="inputanchoforybut"></textarea>
+                        <label for="descripcion_de_la_actividad">Describir la actividad</label>
 
                     </div>
 
