Se modifica y/o optimiza el código: se implementa la deshabilitación del botón de carga de actividad hasta que todos los campos estén validados correctamente.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
             </div>
 
-            <div class="flex-container-forybut">
+            <div class="flex-container-forybut" >                
 
                 <form class="flex-item-forybut">
 
@@ -194,16 +194,16 @@
                         <input type="text" id="imagen_de_la_actividad" class="inputanchoforybut1"/>
                         <label for="imagen_de_la_actividad">Link de la imagen</label>
 
-                    </div>                    
+                    </div>                      
 
-                </form>    
+                </form>      
                 
                 <div class="flex-item-botón">
 
-                    <button id="cargar_actividad" type="submit" > AGREGAR ACTIVIDAD</button>
+                    <button id="cargar_actividad" type="button" disabled> AGREGAR ACTIVIDAD</button>
 
                 </div>   
-
+                
             <div id="flex-container-misactfa" class="flex-container-misactfa">
 
                 <!-- Contenido Dinámico -->
