Se modifica y/u optimiza el código: se lleva al inglés y se termina de organizar el archivo script.js.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
          
                 <div class = "about-me-item">                                 
                
-                    <ul id = "about-me"></ul>                         
+                    <!-- <ul id = "about-me"></ul> -->  
+                    <p id="about-me"></p>             
 
                 </div>
 
