--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="es">
 
 <head> 
 
-    <title>My Website</title>
+    <title> Óscar Padilla | Mi Página Web</title>
     <meta charset="UTF-8">
+    <meta name="description" content="Página Web de Óscar Padilla. Información sobre su trayectoria, tecnologías que maneja y una sección interactiva de actividades.">
+    <meta name="keywords" content="Óscar Padilla, Página Web, desarrollador, NestJS, React.js, TypeScript, tecnología, bio profesional">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
- 
+    <link rel="icon" href="assets/Favicon.png" type="image/png">
+
+
 </head>
 
 <body>
@@ -52,7 +56,7 @@
             <div>
 
                 <h1 id = "welcome"></h1>                
-                <h2 id = "name" class = "hidden-title">ÓSCAR PADILLA</h2>    
+                <h2 id = "name" class = "hidden-title"></h2>    
                 <h3 id = "title" class = "hidden-title"></h3>         
                 
             </div>                     
