Se corrige la ruta del ícono de agregar actividad en el archivo index.html, para evitar error 404 en producción

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                     <button id = "activity-loader" type = "button">
                         
-                        <img src = "assets/logos/icono-agregar.png" alt = "Add" class = "button-icon">
+                        <img src = "assets/icono-agregar.png" alt = "Add" class = "button-icon">
                       
                     </button>
 
