--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <link href = "https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
     <link rel = "icon" href = "assets/logos/Favicon.png" type = "image/png">
 
-
 </head>
 
 <body>
@@ -38,7 +37,7 @@
 
         <section class = "header">
 
-            <img src = "assets/CV_Foto_Henry_2025.png" alt = "Photo of Óscar Padilla" class = "profile-photo">
+            <img src = "assets/CV_Foto_Henry_2025.png" alt = "Photo of Óscar Padilla" class = "profile-photo"/>
 
             <div class = "languages">
 
@@ -220,12 +219,8 @@
         </section>
 
     </main>
-
-    <script src = "scripts/models.js"></script>
-    <script src = "scripts/controllers.js"></script>
-    <script src = "scripts/index.js"></script>
-    <script src = "scripts/languages.js"></script>
-    <script src = "scripts/script.js"></script>
+    
+</script>
 
     <footer class = "social-footer">
 
@@ -250,6 +245,12 @@
         </div>
 
     </footer>
+
+    <script src = "scripts/models.js"></script>
+    <script src = "scripts/controllers.js"></script>
+    <script src = "scripts/index.js"></script>
+    <script src = "scripts/languages.js"></script>
+    <script src = "scripts/script.js"></script>
     
     </body>
 
