feat(about-me, profession-title, technologies): update About Me with backend focus, adjust profession title under name, and replace React with Node.js (logo & link).

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 
                         <div class = "my-skills-margins">
 
-                            <img id = "React" src = "assets/logos/React.png" alt = "React.js icon" class = "my-skills-effect">
+                            <img id = "Node" src = "assets/logos/nodejs.png" alt = "Node.js icon" class = "my-skills-effect">
 
                         </div>
 
                         <h3 class = "my-skills-text"> 
                             
-                            <a href = "https://react.dev/" target = "_blank" class = "tech-link">React.js</a>
+                            <a href = "https://nodejs.org/" target = "_blank" class = "tech-link">Node.js</a>
                         
                         </h3>
 
