feat(profile): update profile photo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <section class = "header">
 
-            <img src = "assets/CV_Foto_Henry_2025.png" alt = "Photo of Óscar Padilla" class = "profile-photo"/>   
+            <img src = "assets/FotoPWNueva.jpg" alt = "Photo of Óscar Padilla" class = "profile-photo"/>   
             
             
 
