feat(assets): update profile photo and refresh index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <section class = "header">
 
-            <img src = "assets/FotoPWNueva.jpg" alt = "Photo of Óscar Padilla" class = "profile-photo"/>   
+            <img src = "assets/FotoPWNueva - Copy.jpg" alt = "Photo of Óscar Padilla" class = "profile-photo"/>   
             
             
 
